--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,12 +10,12 @@ html(lang="en")
     body 
         header.barra 
             h1 UpTask - Administador de Proyectos 
-            a(href="#") Cerrar sesión 
+            a(href="") Cerrar sesión 
 
         main.contenedor 
             aside.contenedor-proyectos 
                 .panel.crear-proyecto 
-                    a(href="#" class="boton") Nuevo Proyecto +
+                    a(href="/nuevo-proyecto" class="boton") Nuevo Proyecto +
                 .panel.lista-proyectos 
                     h2 Proyectos
                     ul#proyectos.proyectos 
